<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		style="@style/Toolbar">
		
		<TextView
			style="@style/TvToolbarText"
			android:layout_marginStart="@dimen/spacing_24"
			android:layout_marginEnd="@dimen/spacing_16"
			android:text="@string/login_toolbar_title" />
	
	</androidx.appcompat.widget.Toolbar>
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="?attr/actionBarSize">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingStart="@dimen/spacing_24"
			android:paddingEnd="@dimen/spacing_24">
			
			<EditText
				android:id="@+id/etNickname"
				style="@style/EtNickname"
				android:layout_marginTop="@dimen/spacing_32"
				tools:ignore="Autofill,LabelFor"
				tools:targetApi="o" />
			
			<EditText
				android:id="@+id/etPassword"
				style="@style/EtPassword"
				android:layout_marginTop="@dimen/spacing_16"
				tools:ignore="Autofill,LabelFor,UnusedAttribute" />
		
		</LinearLayout>
	
	</ScrollView>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_gravity="bottom"
		android:gravity="center"
		android:layout_marginBottom="@dimen/spacing_16"
		android:paddingStart="@dimen/spacing_24"
		android:paddingEnd="@dimen/spacing_24">
		
		<Button
			android:id="@+id/btnLogin"
			style="@style/BtnDefault"
			android:enabled="false"
			android:text="@string/btn_login" />
		
		<TextView
			android:id="@+id/tvRegister"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_16"
			android:fontFamily="@font/roboto_medium"
			android:text="@string/login_bottom_signup_text"
			android:textColor="@color/blue800" />
	
	</LinearLayout>
</FrameLayout>