<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<View
		android:id="@+id/viewProfileArea"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:background="@color/blue700"
		app:layout_constraintBottom_toBottomOf="@id/tvScores"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<com.makeramen.roundedimageview.RoundedImageView
		android:id="@+id/imgAvatar"
		style="@style/ImgAvatar"
		android:layout_width="@dimen/home_img_avatar_size"
		android:layout_height="@dimen/home_img_avatar_size"
		android:layout_marginTop="@dimen/spacing_24"
		app:layout_constraintBottom_toTopOf="@id/tvNickname"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:riv_border_color="@color/grey300" />
	
	<ImageButton
		android:id="@+id/imgLogOut"
		android:layout_width="@dimen/home_ic_logout_size"
		android:layout_height="@dimen/home_ic_logout_size"
		android:layout_marginTop="@dimen/spacing_16"
		android:layout_marginEnd="@dimen/spacing_16"
		android:background="@drawable/selector_bg_logout_button"
		android:contentDescription="@string/content_description_log_out"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_logout_white_24dp" />
	
	<TextView
		android:id="@+id/tvNickname"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/spacing_16"
		android:layout_marginTop="@dimen/spacing_12"
		android:layout_marginEnd="@dimen/spacing_16"
		android:fontFamily="@font/roboto_medium"
		android:textColor="@color/white"
		android:textSize="@dimen/font_25"
		app:layout_constraintBottom_toTopOf="@id/tvScores"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/imgAvatar" />
	
	<TextView
		android:id="@+id/tvScores"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/spacing_16"
		android:layout_marginTop="@dimen/spacing_6"
		android:layout_marginEnd="@dimen/spacing_16"
		android:paddingBottom="@dimen/spacing_24"
		android:textColor="@color/white"
		android:textSize="@dimen/font_17"
		app:layout_constraintBottom_toBottomOf="@id/viewProfileArea"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tvNickname" />
	
	<Button
		android:id="@+id/btnPlay"
		style="@style/BtnDefault"
		android:layout_marginStart="@dimen/spacing_60"
		android:layout_marginEnd="@dimen/spacing_60"
		android:text="@string/btn_play"
		app:layout_constraintBottom_toTopOf="@id/btnLeaders"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/viewProfileArea"
		app:layout_constraintVertical_chainStyle="packed" />
	
	<Button
		android:id="@+id/btnLeaders"
		style="@style/BtnDefault"
		android:layout_marginStart="@dimen/spacing_60"
		android:layout_marginTop="@dimen/spacing_24"
		android:layout_marginEnd="@dimen/spacing_60"
		android:layout_marginBottom="@dimen/spacing_60"
		android:text="@string/btn_leaders"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/btnPlay" />

</androidx.constraintlayout.widget.ConstraintLayout>